<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot2_simulation</name>
  <version>0.0.0</version>
  <description>Simulation of the diffbot2 robot</description>

  <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
  <maintainer email="ivan1993br@gmail.com">Ivan Tarifa</maintainer>
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>

  <license>Apache License 2.0</license>

  <author email="mateus.amarujo@gmail.com">Mateus Amarante</author>
  <author email="ivan1993br@gmail.com">Ivan Tarifa</author>
  <author email="caioaamaral@gmail.com">Caio Amaral</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
